# cligram

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  build.py  cligram_build.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: main.yml  wheel.yml
docs/: Makefile  requirements.txt
docs/source/: cli.rst  conf.py  index.rst  installation.md  installation.rst  quick-start.rst
docs/source/references/: cligram.app.rst  cligram.cli.rst  cligram.commands.rst  cligram.config.rst  cligram.exceptions.rst  cligram.logger.rst  cligram.proxy_manager.rst  cligram.rst  cligram.session.rst  cligram.state_manager.rst  cligram.tasks.rst  cligram.utils.rst
scripts/: benchmark_device.py  check.py  common.py  cov.py  fix.py  init.py  poetry_wrapper.py  test_native_device.py
src/cligram/: __init__.py  __version__.py  _paths.py  app.py  cli.py  config.py  exceptions.py  logger.py  proxy_manager.py  proxy_tester.py  scanner.py  scanner.py.ignore  session.py  state_manager.py  version.py
src/cligram/commands/: __init__.py  config.py  interactive.py  proxy.py  session.py
src/cligram/exceptions/: __init__.py  base.py
src/cligram/tasks/: __init__.py  interactive.py  session.py  telegram.py  transfer.py
src/cligram/utils/: __init__.py  _device.py  _device_native.c  archive.py  device.py  general.py  telegram.py
tests/: __init__.py  conftest.py  test_archive.py  test_config.py  test_proxy_manager.py  test_session.py  test_state_manager.py  test_utils.py
