[project]
name = "cligram"
version = "0.1.0"
description = "cli based telegram client"
authors = [
    {name = "Alireza Poodineh",email = "itsaeliux@gmail.com"}
]
license = "MIT"
readme = "README.md"
packages = [{include = "cligram", from = "src"}]
requires-python = "<4.0,>=3.13"
dependencies = [
    "telethon (>=1.41.2,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "python-socks[asyncio] (>=2.7.2,<3.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "pysocks (>=1.7.1,<2.0.0)",
]

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cligram = "cligram.cli:main"
